--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.5",
     "flow": "^0.2.3",
     "react": "16.13.1",
-    "react-native": "0.63.3",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native": "0.63.3"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
